--- a/Pod/Assets/en.lproj/Localizable.strings
+++ b/Pod/Assets/en.lproj/Localizable.strings
@@ -5,6 +5,7 @@
   Created by Hiroshi Hashiguchi on 2015/06/13.
 
 */
+"VideoQuality.title" = "Video Quality";
 "VideoQuality.High" = "High Quality";
 "VideoQuality.Medium" = "Medium Quality";
 "VideoQuality.Low" = "Low Quality";
