--- a/Pod/Assets/en.lproj/Localizable.strings
+++ b/Pod/Assets/en.lproj/Localizable.strings
@@ -6,8 +6,8 @@
 
 */
 "VideoQuality.title" = "Video Quality";
-"VideoQuality.High" = "High Quality";
-"VideoQuality.Medium" = "Medium Quality";
+"VideoQuality.High" = "High";
+"VideoQuality.Medium" = "Medium";
 "VideoQuality.Low" = "Low Quality";
 "VideoQuality.640x480" = "640x480";
 "VideoQuality.IFrame960x540" = "960x540";
