--- a/Pod/Assets/en.lproj/Localizable.strings
+++ b/Pod/Assets/en.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 "VideoQuality.title" = "Video Quality";
 "VideoQuality.High" = "High";
 "VideoQuality.Medium" = "Medium";
-"VideoQuality.Low" = "Low Quality";
+"VideoQuality.Low" = "Low";
 "VideoQuality.640x480" = "640x480";
 "VideoQuality.IFrame960x540" = "960x540";
 "VideoQuality.IFrame1280x720" = "1280x720";
